# priceless

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_Proton.md  README_developer.md  pyproject.toml  pyrightconfig.json
notebooks/proton_mail/: run_proton_email_01.ipynb  run_retrieve_vouchers_01.ipynb
notebooks/test/: run_test.ipynb
src/configs/: settings.py
src/priceless/: __init__.py  retrieve_vouchers.py
src/proton_email/: __init__.py  login.py  seed_session.py
src/utils/: sum.py  utils_email.py  utils_ibis.py  utils_pandas.py  utils_path.py  utils_plots.py  utils_python.py  utils_sound.py  utils_time_series.py  utils_whatsapp.py
src/utils_test/: __init__.py  my_module.py  my_second_module.py
