[tool.poetry]
name = "priceless"
version = "0.1.0"
description = "priceless backtesting with Docker"
authors = ["Adrian Buzatu"]
readme = "README.md"
# Disable package mode since this is an application, not a library
# and we use poetry for managing package dependencies only
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"  # Update this line to be compatible with Dagster
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
ipython = "^8.30.0"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
coloredlogs = ">=6.1,<=14.0"  # Adjust this to be compatible with Dagster
dagster = "^1.9.3"
dagster-postgres = "^0.25.3"
dagster-webserver = "^1.9.3"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
ibis-framework = {extras = ["duckdb", "postgres", "sqlite"], version = "^9.5.0"}
ipywidgets = "^8.1.5"
httpx = "^0.28.0"
jupyter = "^1.1.1"
notebook = "^7.2.2"
jupyterlab = "^4.3.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
scipy = "^1.14.1"
universal-pathlib = ">=0.2.0"
ta = "^0.11.0"
plotly = "^5.24.1"
scikit-learn = "^1.6.0"
pywhatkit = "^5.4"
quantstats = "^0.0.64"
quantstats-lumi = "^0.3.3"
yfinance = "^0.2.55"
feedparser = "^6.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
